--- a/user.post/post-details.html
+++ b/user.post/post-details.html
@@ -6,7 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Post</title>
-    <link rel="stylesheet" href="../users.info/style.css">
+    <link rel="stylesheet" href="stylepost.css">
+
 </head>
 <body>
 <h2>Post Info3</h2>
